--- a/provision/files/opendatahub-operator.yml.j2
+++ b/provision/files/opendatahub-operator.yml.j2
@@ -1,11 +1,11 @@
-- apiVersion: operators.coreos.com/v1
-  kind: OperatorGroup
-  metadata:
-    name: odh-opg
-    namespace: {{ project_name }} 
-  spec:
-    targetNamespaces:
-    - {{ project_name }} 
+#- apiVersion: operators.coreos.com/v1
+#  kind: OperatorGroup
+#  metadata:
+#    name: odh-opg
+#    namespace: {{ project_name }} 
+#  spec:
+#    targetNamespaces:
+#    - {{ project_name }} 
 
 
 - apiVersion: operators.coreos.com/v1alpha1
@@ -14,7 +14,7 @@
     name: opendatahub-operator
     namespace: {{ project_name }}
   spec:
-    channel: alpha
+    channel: beta
     installPlanApproval: Automatic
     name: opendatahub-operator
     source: community-operators
