--- a/provision/files/amqstreams-subscription.yml.j2
+++ b/provision/files/amqstreams-subscription.yml.j2
@@ -20,7 +20,7 @@
 - apiVersion: operators.coreos.com/v1alpha1
   kind: Subscription
   metadata:
-    name: amqstreams-operator
+    name: amq-streams
     namespace: {{ project_name }}
   spec:
     channel: stable
