--- a/provision/files/opendatahub-operator.yml.j2
+++ b/provision/files/opendatahub-operator.yml.j2
@@ -1,18 +1,8 @@
-#- apiVersion: operators.coreos.com/v1
-#  kind: OperatorGroup
-#  metadata:
-#    name: odh-opg
-#    namespace: {{ project_name }} 
-#  spec:
-#    targetNamespaces:
-#    - {{ project_name }} 
-
-
 - apiVersion: operators.coreos.com/v1alpha1
   kind: Subscription
   metadata:
     name: opendatahub-operator
-    namespace: {{ project_name }}
+    namespace: openshift-operators
   spec:
     channel: beta
     installPlanApproval: Automatic
